--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,14 +1,15 @@
-@use './config-scss/variables.scss';
-@use './config-scss/reset.scss';
-@use './config-scss/rem-calc.scss';
+@import './config-scss/variables.scss';
+@import './config-scss/reset.scss';
+@import './config-scss/rem-calc.scss';
 
-html{
-  font-family: "Roboto", sans-serif;
-  background-color: var(--primary-color);
+html {
+	font-family: 'Roboto', sans-serif;
+	background: var(--primary-color);
 }
 
 main {
-  max-width: rem-calc(600);
-  margin: 0 auto;
-  box-sizing: border-box;
+	max-width: rem-calc(600);
+	box-sizing: border-box;
+	padding: 0 20px;
+	margin: 0 auto;
 }
