--- a/src/app/shared/poke-list/poke-list.component.html
+++ b/src/app/shared/poke-list/poke-list.component.html
@@ -1,16 +1,25 @@
-<a class="pokemon" >
-  <section class="pokemon__status">
-    <h2>
-      Bulbasaur
-    </h2>
-    <ul>
-      <li>Grass</li>
-      <li>Poison</li>
-    </ul>
-  </section>
+<!-- Search -->
+<poke-search (emmitSearch)="getSearch($event)"></poke-search>
 
-  <section class="pokemon__image">
-    <img src="assets/bulbasaur.svg" alt="Bulbasaur">
-  </section>
-</a>
+<section class="listagem">
+  <ng-template ngFor let-pokemon [ngForOf]="getAllPokemons">
+    <a
+      [routerLink]="['details', pokemon.status.id]"
+      class="pokemon"
+      *ngIf="pokemon.status"
+    >
+      <section class="pokemon__status">
+        <h2>{{ pokemon.name }}</h2>
+        <ul>
+          <li *ngFor="let value of pokemon.status.types">
+            {{ value.type.name }}
+          </li>
+        </ul>
+      </section>
 
+      <section class="pokemon__image">
+        <img [src]="pokemon.status.sprites.front_shiny" [alt]="pokemon.name" />
+      </section>
+    </a>
+  </ng-template>
+</section>
