--- a/src/app/shared/poke-search/poke-search.component.html
+++ b/src/app/shared/poke-search/poke-search.component.html
@@ -1,4 +1,9 @@
 <form>
-  <input type="text" placeholder="Buscar pokemon ...">
-  <img src="assets/Vector.svg" alt="Buscar na Poakedex">
+  <input
+    type="text"
+    #input
+    (keyup)="search(input.value)"
+    placeholder="Buscar pokemon ..."
+  />
+  <img src="assets/Vector.svg" alt="Buscar na Poakedex" />
 </form>
