--- a/src/app/shared/poke-list/poke-list.component.scss
+++ b/src/app/shared/poke-list/poke-list.component.scss
@@ -2,14 +2,17 @@
 
 $padding:rem-calc(20);
 :host{
+.listagem{
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
 
   padding: $padding 0;
   .pokemon{
     position: relative;
     display: flex;
     background:var(--branco);
+    margin-bottom: rem-calc(10);
 
     width: calc(49% - 2.5rem);
     height: rem-calc(157 - 40);
@@ -17,12 +20,15 @@ $padding:rem-calc(20);
 
     border-radius: rem-calc(10);
 
+    text-decoration: none;
+    color: var(--primary-color);
+
     &__status{
       h2{
         font-size: rem-cal(22);
         font-style: italic;
         font-weight: 700;
-
+        text-transform: capitalize;
         margin-bottom: rem-calc(10);
       }
       ul{
@@ -63,9 +69,9 @@ $padding:rem-calc(20);
     background: url('../../../assets/bg/Bolinhas.svg');
 
     img{
-        width: rem-calc(80);
+        width: rem-calc(100);
     }
 
    }
   }
-}
+}}
